fix: remove threejs on mobile

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -91,7 +91,8 @@
   height: 200px;
   border-radius: 50%;
   overflow: hidden;
-  margin-top: 30px;
+  margin-top: 50px;
+  cursor: default; 
 }
 
 .wrap-img-fallback-about img {
